[package]
name = "mljcl"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
serde = "1.0.189"
serde_derive = "1.0.189"
serde_json = "1.0.107"

[features]
default = ["full"] # Disables unneeded features for audiosurfscrobblerlib
full = []
