[package]
name = "mljcl"
version = "0.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
chrono = "0.4.31"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
serde = "1.0.189"
serde_derive = "1.0.189"
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["macros"] }

[features]
default = ["full"] # Disables unneeded features for audiosurfscrobblerlib
full = []
